--- a/home.css
+++ b/home.css
@@ -31,6 +31,8 @@ input {
     font-size: 130%;
     width: 25%;
     height: 50%;
+    text-align: center;
+    border-radius: 50%;
 }
 input.mix-btn , .element_btn {
     font-family: 'Chewy';
