--- a/home.css
+++ b/home.css
@@ -60,8 +60,6 @@ input.mix-btn {
     border: none;
     width: 100%;
     height:  100%;
-    /* width: 90px;
-    height:  90px; */
 }
 .element-name  {
     font-size: 16px;
@@ -83,6 +81,14 @@ section {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+.translate-middle-x {
+    left: 5%;
+    font-size: x-large;
+    font-weight: bold;
+    color: whitesmoke;
+    background-color: transparent;
+    border: none;
 }
 img {    
     width: 30%;
