Hide Arrows From Input Number

--- a/home.css
+++ b/home.css
@@ -112,7 +112,11 @@ input#name_search {
     width: 100% !important;
     height: 100% !important;
 }
-
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
 
 
 /* Media queries */
