--- a/home.css
+++ b/home.css
@@ -117,6 +117,10 @@ input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
+.animation {
+    width: 100%;
+    height: 100%;
+}
 
 
 /* Media queries */
