--- a/home.css
+++ b/home.css
@@ -128,6 +128,15 @@ input::-webkit-inner-spin-button {
   width: 100%;
   height: 100%;
 }
+#animation {
+  display: none;
+  height: 460px;
+  width: 300px;
+}
+section:nth-child(even) {
+  background-color: transparent !important;
+  display:block;
+}
 
 /* Media queries */
 
