--- a/home.css
+++ b/home.css
@@ -130,8 +130,10 @@ input::-webkit-inner-spin-button {
 }
 #animation {
   display: none;
-  height: 460px;
-  width: 300px;
+  /* height: 460px;
+  width: 300px; */
+  width: 80%;
+  height: 80%;
 }
 section:nth-child(even) {
   background-color: transparent !important;
@@ -180,6 +182,10 @@ section:nth-child(even) {
     width: 15%;
     height: 50%;
   }
+  #animation {
+    width: 70%;
+    height: 80%;
+  }
 }
 @media (min-width: 700px) {
   input {
@@ -190,6 +196,10 @@ section:nth-child(even) {
   img {
     width: 20%;
     height: 165%;
+  }
+  #animation {
+    width: 60%;
+    height: 80%;
   }
 }
 @media (min-width: 768px) {
@@ -204,11 +214,19 @@ section:nth-child(even) {
     width: 18%;
     height: 170%;
   }
+  #animation {
+    width: 50%;
+    height: 80%;
+  }
 }
 @media (min-width: 900px) {
   img {
     width: 16%;
     height: 175%;
+  }
+  #animation {
+    width: 40%;
+    height: 80%;
   }
 }
 @media (min-width: 992px) {
@@ -224,6 +242,10 @@ section:nth-child(even) {
     width: 15%;
     height: 180%;
   }
+  #animation {
+    width: 35%;
+    height: 85%;
+  }
 }
 @media (min-width: 1200px) {
   img {
@@ -235,5 +257,9 @@ section:nth-child(even) {
     grid-template-columns: repeat(6, 1fr);
     column-gap: 2%;
     row-gap: 4%;
+  }
+  #animation {
+    width: 30%;
+    height: 85%;
   }
 }
