media queries for input and div size

--- a/home.css
+++ b/home.css
@@ -26,18 +26,20 @@ body {
   align-items: center;
   position: relative;
 }
-input {
+#subscript_1,
+#subscript_2  {
   z-index: 1000 !important;
   font-family: "Chewy";
   font-size: 130%;
-  width: 25%;
+  width: 24%;
   height: 50%;
   text-align: center;
-  border-radius: 50%;
+  border-radius: 50% !important;
 }
 #subscript_1,
 #subscript_2 {
   text-align: center !important;
+  border-radius: 50% !important;
 }
 input.mix-btn,
 .element_btn {
@@ -47,7 +49,7 @@ input.mix-btn,
   background-color: #e73813;
   width: 45%;
   height: 45%;
-  border-radius: 15px;
+  border-radius: 15px !important;
   border: none;
 }
 
@@ -135,11 +137,13 @@ input::-webkit-inner-spin-button {
   width: 80%;
   height: 80%;
 }
-section:nth-child(even) {
+#animation_container {
   background-color: transparent !important;
-  display:block;
+  display: none;
 }
-
+.preface {
+  height: 90%;
+}
 /* Media queries */
 
 @media (min-width: 414px) {
@@ -159,6 +163,10 @@ section:nth-child(even) {
     grid-template-columns: repeat(4, 1fr);
     gap: 3%;
   }
+  #subscript_1,
+  #subscript_2 {
+    width: 18%;
+  }
 }
 @media (min-width: 500px) {
   input {
@@ -169,6 +177,10 @@ section:nth-child(even) {
   img {
     width: 25%;
     height: 155%;
+  }
+  #subscript_1,
+  #subscript_2 {
+    width: 16%;
   }
 }
 
@@ -186,6 +198,10 @@ section:nth-child(even) {
     width: 70%;
     height: 80%;
   }
+  #subscript_1,
+  #subscript_2 {
+    width: 14%;
+  }
 }
 @media (min-width: 700px) {
   input {
@@ -200,6 +216,10 @@ section:nth-child(even) {
   #animation {
     width: 60%;
     height: 80%;
+  }
+  #subscript_1,
+  #subscript_2 {
+    width: 12%;
   }
 }
 @media (min-width: 768px) {
@@ -218,6 +238,10 @@ section:nth-child(even) {
     width: 50%;
     height: 80%;
   }
+  #subscript_1,
+  #subscript_2 {
+    width: 10%;
+  }
 }
 @media (min-width: 900px) {
   img {
@@ -228,6 +252,10 @@ section:nth-child(even) {
     width: 40%;
     height: 80%;
   }
+  #subscript_1,
+  #subscript_2 {
+    width: 10%;
+  }
 }
 @media (min-width: 992px) {
   .button-container {
@@ -235,6 +263,10 @@ section:nth-child(even) {
     grid-template-columns: repeat(5, 1fr);
     column-gap: 3%;
     row-gap: 4%;
+  }
+  #subscript_1,
+  #subscript_2 {
+    width: 17%;
   }
 }
 @media (min-width: 1024px) {
@@ -245,6 +277,10 @@ section:nth-child(even) {
   #animation {
     width: 35%;
     height: 85%;
+  }
+  #subscript_1,
+  #subscript_2 {
+    width: 16%;
   }
 }
 @media (min-width: 1200px) {
@@ -259,7 +295,11 @@ section:nth-child(even) {
     row-gap: 4%;
   }
   #animation {
-    width: 30%;
+    width: 25%;
     height: 85%;
+  }
+  #subscript_1,
+  #subscript_2 {
+    width: 11%;
   }
 }
