--- a/home.css
+++ b/home.css
@@ -14,6 +14,8 @@ body {
   position: relative;
   width: 100% !important;
   height: 100% !important;
+  min-height: 600px;
+  min-width: 340px;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -271,7 +273,7 @@ input::-webkit-inner-spin-button {
 }
 @media (min-width: 1024px) {
   img {
-    width: 15%;
+    width: 20%;
     height: 180%;
   }
   #animation {
