--- a/home.css
+++ b/home.css
@@ -148,6 +148,18 @@ input::-webkit-inner-spin-button {
 }
 .preface {
   height: 90%;
+  animation: myAnim .7s ease 0s 1 normal forwards;
+}
+@keyframes myAnim {
+  0% {
+      opacity: 0;
+      transform: scale(0.6);
+  }
+
+  100% {
+      opacity: 1;
+      transform: scale(1);
+  }
 }
 /* Media queries */
 
