--- a/index.css
+++ b/index.css
@@ -20,6 +20,7 @@ body {
 .buttons {
     display: flex;
     flex-direction: column;
+    animation: myAnim .7s ease 0s 1 normal forwards;
 }
 .buttons button {
     font-family: 'Chewy';
@@ -30,21 +31,36 @@ body {
     padding: 3px 30px;
     border-radius: 15px;
     border: none;
+    transition: .2s ease-in 0s;
 }
 .buttons button:hover {
     background-color: #ba2d11;
+    transform: scale(1.25) !important;
 }
 img {
     margin-bottom: 8%;
     width: 100%;
     height: 15%;
+    animation: myAnim .7s ease 0s 1 normal forwards;
 }
 footer {
     position: fixed;
     bottom: 0;
     width: 100%;
     height: 10%;
-    background-color: red;
+    background-color: red;        
+    animation: none !important;
+}
+@keyframes myAnim {
+    0% {
+        opacity: 0;
+        transform: scale(0.6);
+    }
+
+    100% {
+        opacity: 1;
+        transform: scale(1);
+    }
 }
 @media (min-width:415px) {
     img {
