--- a/index.css
+++ b/index.css
@@ -41,11 +41,14 @@ img {
     margin-bottom: 8%;
     width: 100%;
     height: 15%;
-    transition: .2s ease-in 0s 1 normal;
-    animation: myAnim .7s ease-in-out 0s 1 normal forwards;
+    animation: myAnim .7s ease-in-out 0s 1;
+}
+img:first-child {
+    transition: .2s ease-in 0s;
 }
 img:hover {
     transform: scale(1.15) !important;
+    
 }
 footer {
     position: fixed;
