--- a/home.css
+++ b/home.css
@@ -151,10 +151,7 @@ img {
   height: 100px;
 }
 .button-container {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  column-gap: 4%;
-  row-gap: 2%;
+  display: row;
 }
 
 .offcanvas,
